# BuildingGenerator

./: .gitignore  CMakeLists.txt  README.md  vc140.idb
assets/: config1-house.shp  config2-house.shp  config3-house.shp  house.shp
cmake/: findglfw3.cmake
include/: camera.h  interpreter.cpp  interpreter.h  rule.h  shape.h
shaders/: f.glsl
src/: camera.cpp  camera.hpp  interpreter.cpp  interpreter.hpp  main.cpp  mesh.cpp  mesh.hpp  rule.hpp  shader.cpp  shader.hpp  shape.cpp  shape.hpp  stb.cpp
